fixing height on mobile

--- a/src/component/main-renderer/main-renderer.css
+++ b/src/component/main-renderer/main-renderer.css
@@ -6,10 +6,5 @@
     justify-content: center;
     align-items: center;
     background: radial-gradient(rgba(0, 133, 255, 0.5), var(--blue-color));
-}
-
-@media screen and (max-width: 765px) {
-    .main-renderer {
-        height: max(fit-content, 100vh);
-    }
+     background-attachment: fixed;
 }
